--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <li class="nav_item"><p>contacts</p></li>
             </ul>
             <ul class="social_links">
-                <li><img src="" alt="in"></li>
-                <li><img src="" alt="github"></li>
+                <ul class="social_link"><a href="https://github.com/sammyrhymes"><img src="images/github.svg" alt=""></a></ul>
+                <ul class="social_link"><a href="https://www.linkedin.com/in/samuel-mwendwa-44459b239/"><img src="images/linkedIn.svg" alt=""></a></ul>
             </ul>
         </nav>
     </header>
