--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <p><strong>SM</strong></p>
             </div>
             <ul class = "nav_items">
-                <li class="nav_item"><p>About</p></li>
-                <li class="nav_item"><p>Projects</p></li>
-                <li class="nav_item"><p>contacts</p></li>
+                <li class="nav_item"><a href="">About</a></li>
+                <li class="nav_item"><a href="">Projects</a></li>
+                <li class="nav_item"><a href="">Contacts</a></li>
             </ul>
             <ul class="social_links">
                 <ul class="social_link"><a href="https://github.com/sammyrhymes"><img src="images/github.svg" alt=""></a></ul>
@@ -30,7 +30,7 @@
                 various data analysis and machine learning tools. 
                 My journey into the world of data began 
                 with a curiosity to extract meaningful insights 
-                from complex datasets, and it has since evolved into my career path.</p>
+                from complex datasets, and it has since evolved into a career path.</p>
         </div>
     </article>
     <footer>
