moded to nothing upload expected soon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <p><strong>SM</strong></p>
             </div>
             <ul class = "nav_items">
-                <li class="nav_item"><a href="">About</a></li>
+                <li class="nav_item"><a href="#skills">Skills</a></li>
                 <li class="nav_item"><a href="">Projects</a></li>
                 <li class="nav_item"><a href="">Contacts</a></li>
             </ul>
@@ -23,18 +23,13 @@
             </ul>
         </nav>
     </header>
-    <article>
-        <div class="hero">
-            <h1 class = "name">Samuel Mwendwa</h1>
-            <p class="bio">I am a passionate Data Scientist with a strong foundation in 
-                various data analysis and machine learning tools. 
-                My journey into the world of data began 
-                with a curiosity to extract meaningful insights 
-                from complex datasets, and it has since evolved into a career path.</p>
-        </div>
+    <article class="content-area">
+        <p>content goes here</p>
     </article>
     <footer>
-
+        <p class="end">
+            copyright &copy; 2023 site by Samuel Mwendwa
+        </p>
     </footer>
 </body>
 </html>
